--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,29 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: utf8
+  pool: 10
   timeout: 5000
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: notes_development
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: notes_test
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5432
 
 production:
   <<: *default
